fix: update icon sizes and adjust modal styles for better alignment

--- a/public/ECKO/stylesheets/light.css
+++ b/public/ECKO/stylesheets/light.css
@@ -186,7 +186,7 @@
     --modal-title-f-s: 20px;
     --modal-title-f-w: 700;
     --modal-title-f-c: #FFF;
-    --modal-paragraph-f-s: 12px;
+    --modal-paragraph-f-s: 16px;
     --modal-paragraph-f-w: 400;
     --modal-paragraph-f-c: #FFFFFF;
     /*doesn't exeist for Ecko*/
