--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 15px;
     margin-top: 24px;
 }
 
