--- a/src/components/Modals/LoginModal/styles.module.css
+++ b/src/components/Modals/LoginModal/styles.module.css
@@ -8,8 +8,8 @@
 }
 
 .title {
-    margin-top: 11px;
-    margin-bottom: 17px;
+    margin-top: 22.25px;
+    margin-bottom: 10px;
     font-size: var(--modal-title-f-s);
     font-weight: var(--modal-title-f-w);
     color: var(--modal-title-f-c);
@@ -22,7 +22,7 @@
     font-size: var(--modal-paragraph-f-s);
     font-weight: var(--modal-paragraph-f-w);
     color: var(--modal-paragraph-f-c);
-    margin-bottom: 17px;
+    margin-bottom: 28.75px;
     line-height: 22px;
     text-align: center;
 }
